tests/k8s_testcases/network-policy-checks-bad-path/endport_cannot_be_defined.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: endport-test
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 10.0.0.0
      ports:
        - port: tbd
          protocol: UDP
          # port is named, but end port exists:
          endPort: 60
